--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     
 <div class="container contenedor">
     <div class="row justify-content-between row-margin">
-        <div class="col col-md-5 -row-1 color-background " id="GB">
+        <div class="col col-md-5 columna color-background " id="GB">
             
         </div>
-        <div class="col col-md-6 -row-1 color-background" id="FR"></div>
+        <div class="col col-md-6 columna color-background" id="FR"></div>
     </div>
     <div class="row justify-content-between row-margin">
-        <div class="col col-md-4 -row-2 color-background" id="PT"></div>
-        <div class="col col-md-7 -row-2 color-background" id="ES"></div>
+        <div class="col col-md-4 columna color-background" id="PT"></div>
+        <div class="col col-md-7 columna color-background" id="ES"></div>
     </div>
     <div class="row">
-        <div class="col col-md12 -row-3 color-background" id="MA"></div>
+        <div class="col col-md-12 columna color-background" id="MA"></div>
     </div>
 </div>
 
