modificado index bootstrap responsive

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 <body>
     
 <div class="container contenedor">
-    <div class="row justify-content-between row-margin">
-        <div class="col col-md-5 columna color-background " id="GB">
+    <div class="row justify-content-between">
+        <div class="col-12 col-lg-5 columna color-background " id="GB">
             
         </div>
-        <div class="col col-md-6 columna color-background" id="FR"></div>
+        <div class="col-12 col-lg-6 columna color-background" id="FR"></div>
     </div>
-    <div class="row justify-content-between row-margin">
-        <div class="col col-md-4 columna color-background" id="PT"></div>
-        <div class="col col-md-7 columna color-background" id="ES"></div>
+    <div class="row justify-content-between">
+        <div class="col-12 col-lg-4 columna color-background" id="PT"></div>
+        <div class="col-12 col-lg-7 columna color-background" id="ES"></div>
     </div>
     <div class="row">
-        <div class="col col-md-12 columna color-background" id="MA"></div>
+        <div class="col-12 col-lg-12 columna color-background" id="MA"></div>
     </div>
 </div>
 
