primer paso mostrar datos desglosados con evento hover

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ALERT CODE</title>
     <link rel="shortcut icon" href="./assets/coronavirus.png" type="image/x-icon">
     <script type="module" src="./scripts/getFromApi.js"></script>
+    <script src="./scripts/Events.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -21,16 +22,24 @@
 <div class="container contenedor">
     <div class="row justify-content-between">
         <div class="col-12 col-lg-5 columna color-background " id="GB">
-            
+            <div class="popup "></div>
         </div>
-        <div class="col-12 col-lg-6 columna color-background" id="FR"></div>
+        <div class="col-12 col-lg-6 columna color-background" id="FR">
+            <div class="popup "></div>
+        </div>
     </div>
     <div class="row justify-content-between">
-        <div class="col-12 col-lg-4 columna color-background" id="PT"></div>
-        <div class="col-12 col-lg-7 columna color-background" id="ES"></div>
+        <div class="col-12 col-lg-4 columna color-background" id="PT">
+            <div class="popup "></div>
+        </div>
+        <div class="col-12 col-lg-7 columna color-background" id="ES">
+            <div class="popup "></div>
+        </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-12 columna color-background" id="MA"></div>
+        <div class="col-12 col-lg-12 columna color-background" id="MA">
+            <div class="popup "></div>
+        </div>
     </div>
 </div>
 
