--- a/index.html
+++ b/index.html
@@ -8,40 +8,48 @@
     <link rel="shortcut icon" href="./assets/coronavirus.png" type="image/x-icon">
     <script type="module" src="./scripts/getFromApi.js"></script>
     <script src="./scripts/Events.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-   
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    
-<div class="container contenedor">
-    <div class="row justify-content-between">
-        <div class="col-12 col-lg-5 columna color-background " id="GB">
-            <div class="popup "></div>
+
+    <div class="container contenedor">
+        <div class="row justify-content-between">
+            <div class="col-12 col-lg-5 columna color-background " id="GB">
+                <div class="row popup"></div>
+            </div>
+            <div class="col-12 col-lg-6 columna color-background" id="FR">
+                <div class="row popup"></div>
+            </div>
         </div>
-        <div class="col-12 col-lg-6 columna color-background" id="FR">
-            <div class="popup "></div>
+        <div class="row justify-content-between">
+            <div class="col-12 col-lg-4 columna color-background" id="PT">
+                <div class="row popup"></div>
+            </div>
+            <div class="col-12 col-lg-7 columna color-background" id="ES">
+                <div class="row popup"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-12 columna color-background" id="MA">
+                <div class="row popup"></div>
+            </div>
         </div>
     </div>
-    <div class="row justify-content-between">
-        <div class="col-12 col-lg-4 columna color-background" id="PT">
-            <div class="popup "></div>
-        </div>
-        <div class="col-12 col-lg-7 columna color-background" id="ES">
-            <div class="popup "></div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-lg-12 columna color-background" id="MA">
-            <div class="popup "></div>
-        </div>
-    </div>
-</div>
 
 
 
